# eosio-testing-plugin

./: CMakeLists.txt  install.patch  testing_plugin.cpp
include/eosio/testing_plugin/: testing_plugin.hpp
